# BufferLib

./: .gitmodules  BufferLib.gv  BufferLib.makefile  BufferLib.sublime-workspace  Hello.txt  README.md  build_master.json  makefile  meson.build  meson.options
binding-cpp/: BufferLibcpp.gv  makefile
binding-cpp/include/: buffer.hpp
binding-cpp/source/: buffer.cpp  main.cpp
include/: buffer.h  buffer_test.h  example.h
include/bufferlib/: buffer.h  buffer.hpp  buffer_test.h  defines.h
source/: buffer.c  buffer_test.c  example.c  main.c
subprojects/: calltrace.wrap
